libqt6c/src/libqaccessible.hpp

typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
QStringList QAccessibleActionInterface_ActionNames(const QAccessibleActionInterface* self);
libqt_string QAccessibleActionInterface_LocalizedActionName(const QAccessibleActionInterface* self, const libqt_string name);
libqt_string QAccessibleActionInterface_LocalizedActionDescription(const QAccessibleActionInterface* self, const libqt_string name);
void QAccessibleActionInterface_DoAction(QAccessibleActionInterface* self, const libqt_string actionName);
QStringList QAccessibleActionInterface_KeyBindingsForAction(const QAccessibleActionInterface* self, const libqt_string actionName);
libqt_string QAccessibleActionInterface_PressAction();
libqt_string QAccessibleActionInterface_IncreaseAction();
libqt_string QAccessibleActionInterface_DecreaseAction();
libqt_string QAccessibleActionInterface_ShowMenuAction();
libqt_string QAccessibleActionInterface_SetFocusAction();
libqt_string QAccessibleActionInterface_ToggleAction();
libqt_string QAccessibleActionInterface_ScrollLeftAction();
libqt_string QAccessibleActionInterface_ScrollRightAction();
libqt_string QAccessibleActionInterface_ScrollUpAction();
libqt_string QAccessibleActionInterface_ScrollDownAction();
libqt_string QAccessibleActionInterface_NextPageAction();
libqt_string QAccessibleActionInterface_PreviousPageAction();
void QAccessibleActionInterface_OperatorAssign(QAccessibleActionInterface* self, const QAccessibleActionInterface* param1);
void QAccessibleActionInterface_Delete(QAccessibleActionInterface* self);
libqt_string QAccessibleImageInterface_ImageDescription(const QAccessibleImageInterface* self);
QSize* QAccessibleImageInterface_ImageSize(const QAccessibleImageInterface* self);
QPoint* QAccessibleImageInterface_ImagePosition(const QAccessibleImageInterface* self);
void QAccessibleImageInterface_Delete(QAccessibleImageInterface* self);