QtBeef/src/Qt/qaccessible.bf

class QAccessibleActionInterface : IQAccessibleActionInterface
{
	private QAccessibleActionInterface_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleActionInterface_OnActionNames(obj.ObjectPtr,  => QtBeef_QAccessibleActionInterface_OnActionNames);
		CQt.QAccessibleActionInterface_OnLocalizedActionName(obj.ObjectPtr,  => QtBeef_QAccessibleActionInterface_OnLocalizedActionName);
		CQt.QAccessibleActionInterface_OnLocalizedActionDescription(obj.ObjectPtr,  => QtBeef_QAccessibleActionInterface_OnLocalizedActionDescription);
		CQt.QAccessibleActionInterface_OnDoAction(obj.ObjectPtr,  => QtBeef_QAccessibleActionInterface_OnDoAction);
		CQt.QAccessibleActionInterface_OnKeyBindingsForAction(obj.ObjectPtr,  => QtBeef_QAccessibleActionInterface_OnKeyBindingsForAction);
	}
	static void QtBeef_QAccessibleActionInterface_OnActionNames(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnActionNames();
	}
	static void QtBeef_QAccessibleActionInterface_OnLocalizedActionName(void* ptr, libqt_string name)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnLocalizedActionName(scope .(), name);
	}
	static void QtBeef_QAccessibleActionInterface_OnLocalizedActionDescription(void* ptr, libqt_string name)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnLocalizedActionDescription(scope .(), name);
	}
	static void QtBeef_QAccessibleActionInterface_OnDoAction(void* ptr, libqt_string actionName)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnDoAction(actionName);
	}
	static void QtBeef_QAccessibleActionInterface_OnKeyBindingsForAction(void* ptr, libqt_string actionName)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnKeyBindingsForAction(actionName);
	}
	public this(QAccessibleActionInterface_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QAccessibleActionInterface_Delete(this.ptr);
	}
	public void Tr(String outStr, c_char* sourceText)
	{
		this.ptr.Tr(outStr, sourceText);
	}
	public  virtual void* OnActionNames()
	{
		return default;
	}
	public  virtual void OnLocalizedActionName(String outStr, libqt_string name)
	{
	}
	public  virtual void OnLocalizedActionDescription(String outStr, libqt_string name)
	{
	}
	public  virtual void OnDoAction(libqt_string actionName)
	{
	}
	public  virtual void* OnKeyBindingsForAction(libqt_string actionName)
	{
		return default;
	}
	public void PressAction(String outStr)
	{
		this.ptr.PressAction(outStr);
	}
	public void IncreaseAction(String outStr)
	{
		this.ptr.IncreaseAction(outStr);
	}
	public void DecreaseAction(String outStr)
	{
		this.ptr.DecreaseAction(outStr);
	}
	public void ShowMenuAction(String outStr)
	{
		this.ptr.ShowMenuAction(outStr);
	}
	public void SetFocusAction(String outStr)
	{
		this.ptr.SetFocusAction(outStr);
	}
	public void ToggleAction(String outStr)
	{
		this.ptr.ToggleAction(outStr);
	}
	public void ScrollLeftAction(String outStr)
	{
		this.ptr.ScrollLeftAction(outStr);
	}
	public void ScrollRightAction(String outStr)
	{
		this.ptr.ScrollRightAction(outStr);
	}
	public void ScrollUpAction(String outStr)
	{
		this.ptr.ScrollUpAction(outStr);
	}
	public void ScrollDownAction(String outStr)
	{
		this.ptr.ScrollDownAction(outStr);
	}
	public void NextPageAction(String outStr)
	{
		this.ptr.NextPageAction(outStr);
	}
	public void PreviousPageAction(String outStr)
	{
		this.ptr.PreviousPageAction(outStr);
	}
	public void Tr2(String outStr, c_char* sourceText, c_char* disambiguation)
	{
		this.ptr.Tr2(outStr, sourceText, disambiguation);
	}
	public void Tr3(String outStr, c_char* sourceText, c_char* disambiguation, c_int n)
	{
		this.ptr.Tr3(outStr, sourceText, disambiguation, n);
	}
}
interface IQAccessibleActionInterface : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QAccessibleActionInterface_Delete")]
	public static extern void QAccessibleActionInterface_Delete(QAccessibleActionInterface_Ptr self);
	[LinkName("QAccessibleActionInterface_Tr")]
	public static extern libqt_string QAccessibleActionInterface_Tr(c_char* sourceText);
	[LinkName("QAccessibleActionInterface_ActionNames")]
	public static extern void* QAccessibleActionInterface_ActionNames(void* self);
	
	public function void QAccessibleActionInterface_OnActionNames_action(void* self);
	[LinkName("QAccessibleActionInterface_OnActionNames")]
	public static extern void* QAccessibleActionInterface_OnActionNames(void* self, QAccessibleActionInterface_OnActionNames_action _action);
	
	[LinkName("QAccessibleActionInterface_SuperActionNames")]
	public static extern void* QAccessibleActionInterface_SuperActionNames(void* self);
	[LinkName("QAccessibleActionInterface_LocalizedActionName")]
	public static extern libqt_string QAccessibleActionInterface_LocalizedActionName(void* self, libqt_string name);
	
	public function void QAccessibleActionInterface_OnLocalizedActionName_action(void* self, libqt_string name);
	[LinkName("QAccessibleActionInterface_OnLocalizedActionName")]
	public static extern libqt_string QAccessibleActionInterface_OnLocalizedActionName(void* self, QAccessibleActionInterface_OnLocalizedActionName_action _action);
	
	[LinkName("QAccessibleActionInterface_SuperLocalizedActionName")]
	public static extern libqt_string QAccessibleActionInterface_SuperLocalizedActionName(void* self, libqt_string name);
	[LinkName("QAccessibleActionInterface_LocalizedActionDescription")]
	public static extern libqt_string QAccessibleActionInterface_LocalizedActionDescription(void* self, libqt_string name);
	
	public function void QAccessibleActionInterface_OnLocalizedActionDescription_action(void* self, libqt_string name);
	[LinkName("QAccessibleActionInterface_OnLocalizedActionDescription")]
	public static extern libqt_string QAccessibleActionInterface_OnLocalizedActionDescription(void* self, QAccessibleActionInterface_OnLocalizedActionDescription_action _action);
	
	[LinkName("QAccessibleActionInterface_SuperLocalizedActionDescription")]
	public static extern libqt_string QAccessibleActionInterface_SuperLocalizedActionDescription(void* self, libqt_string name);
	[LinkName("QAccessibleActionInterface_DoAction")]
	public static extern void QAccessibleActionInterface_DoAction(void* self, libqt_string actionName);
	
	public function void QAccessibleActionInterface_OnDoAction_action(void* self, libqt_string actionName);
	[LinkName("QAccessibleActionInterface_OnDoAction")]
	public static extern void QAccessibleActionInterface_OnDoAction(void* self, QAccessibleActionInterface_OnDoAction_action _action);
	
	[LinkName("QAccessibleActionInterface_SuperDoAction")]
	public static extern void QAccessibleActionInterface_SuperDoAction(void* self, libqt_string actionName);
	[LinkName("QAccessibleActionInterface_KeyBindingsForAction")]
	public static extern void* QAccessibleActionInterface_KeyBindingsForAction(void* self, libqt_string actionName);
	
	public function void QAccessibleActionInterface_OnKeyBindingsForAction_action(void* self, libqt_string actionName);
	[LinkName("QAccessibleActionInterface_OnKeyBindingsForAction")]
	public static extern void* QAccessibleActionInterface_OnKeyBindingsForAction(void* self, QAccessibleActionInterface_OnKeyBindingsForAction_action _action);
	
	[LinkName("QAccessibleActionInterface_SuperKeyBindingsForAction")]
	public static extern void* QAccessibleActionInterface_SuperKeyBindingsForAction(void* self, libqt_string actionName);
	[LinkName("QAccessibleActionInterface_PressAction")]
	public static extern libqt_string QAccessibleActionInterface_PressAction();
	[LinkName("QAccessibleActionInterface_IncreaseAction")]
	public static extern libqt_string QAccessibleActionInterface_IncreaseAction();
	[LinkName("QAccessibleActionInterface_DecreaseAction")]
	public static extern libqt_string QAccessibleActionInterface_DecreaseAction();
	[LinkName("QAccessibleActionInterface_ShowMenuAction")]
	public static extern libqt_string QAccessibleActionInterface_ShowMenuAction();
	[LinkName("QAccessibleActionInterface_SetFocusAction")]
	public static extern libqt_string QAccessibleActionInterface_SetFocusAction();
	[LinkName("QAccessibleActionInterface_ToggleAction")]
	public static extern libqt_string QAccessibleActionInterface_ToggleAction();
	[LinkName("QAccessibleActionInterface_ScrollLeftAction")]
	public static extern libqt_string QAccessibleActionInterface_ScrollLeftAction();
	[LinkName("QAccessibleActionInterface_ScrollRightAction")]
	public static extern libqt_string QAccessibleActionInterface_ScrollRightAction();
	[LinkName("QAccessibleActionInterface_ScrollUpAction")]
	public static extern libqt_string QAccessibleActionInterface_ScrollUpAction();
	[LinkName("QAccessibleActionInterface_ScrollDownAction")]
	public static extern libqt_string QAccessibleActionInterface_ScrollDownAction();
	[LinkName("QAccessibleActionInterface_NextPageAction")]
	public static extern libqt_string QAccessibleActionInterface_NextPageAction();
	[LinkName("QAccessibleActionInterface_PreviousPageAction")]
	public static extern libqt_string QAccessibleActionInterface_PreviousPageAction();
	[LinkName("QAccessibleActionInterface_OperatorAssign")]
	public static extern void QAccessibleActionInterface_OperatorAssign(void* self, void** param1);
	[LinkName("QAccessibleActionInterface_Tr2")]
	public static extern libqt_string QAccessibleActionInterface_Tr2(c_char* sourceText, c_char* disambiguation);
	[LinkName("QAccessibleActionInterface_Tr3")]
	public static extern libqt_string QAccessibleActionInterface_Tr3(c_char* sourceText, c_char* disambiguation, c_int n);
}
// --------------------------------------------------------------
// QAccessibleImageInterface
// --------------------------------------------------------------
[CRepr]
struct QAccessibleImageInterface_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public void ImageDescription(String outStr)
	{
		CQt.QAccessibleImageInterface_ImageDescription((.)this.Ptr);
	}
	public QSize_Ptr ImageSize()
	{
		return QSize_Ptr(CQt.QAccessibleImageInterface_ImageSize((.)this.Ptr));
	}
	public QPoint_Ptr ImagePosition()
	{
		return QPoint_Ptr(CQt.QAccessibleImageInterface_ImagePosition((.)this.Ptr));
	}
}
class QAccessibleImageInterface : IQAccessibleImageInterface
{
	private QAccessibleImageInterface_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleImageInterface_OnImageDescription(obj.ObjectPtr,  => QtBeef_QAccessibleImageInterface_OnImageDescription);
		CQt.QAccessibleImageInterface_OnImageSize(obj.ObjectPtr,  => QtBeef_QAccessibleImageInterface_OnImageSize);
		CQt.QAccessibleImageInterface_OnImagePosition(obj.ObjectPtr,  => QtBeef_QAccessibleImageInterface_OnImagePosition);
	}
	static void QtBeef_QAccessibleImageInterface_OnImageDescription(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnImageDescription(scope .());
	}
	static void QtBeef_QAccessibleImageInterface_OnImageSize(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnImageSize();
	}
	static void QtBeef_QAccessibleImageInterface_OnImagePosition(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnImagePosition();
	}
	public this(QAccessibleImageInterface_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QAccessibleImageInterface_Delete(this.ptr);
	}
	public  virtual void OnImageDescription(String outStr)
	{
	}
	public  virtual QSize_Ptr OnImageSize()
	{
		return default;
	}
	public  virtual QPoint_Ptr OnImagePosition()
	{
		return default;
	}
}
interface IQAccessibleImageInterface : IQtObjectInterface
{
}
